# stride_server_domset

./: .env  .gitignore  Cargo.toml  README.md  add_gnp_instance.ipynb  add_instances.ipynb  docker-compose-testing.yml  docker-compose.yml  requests.http  run-tests.sh  runner.py  solver_dummy.py  testing.env
.github/workflows/: rust.yml
.sqlx/: query-2f16c344eaebcfda3d837b5c37c49a8959e3bfd14e2cf9a66e7b1fdb626351d0.json  query-3fd810a329ce1eeb45f36648040194028d48df7420e1feeb992de9578578f337.json  query-562116402ea854f486be6d416140def6f2a3220817a7ee43153ee04b372f42a3.json  query-822dfc19074b3817722613ff707d6859b19d05776dfd46bef3824615a1b99de3.json  query-b999457f294d959e9c47d2d1055a0462b5b9d37e50bc7a5b18133a07b75e0d53.json
assets/: index.html  instance.html  run.html  runs.html  runs_script.js  script.js
assets/css/: stride.css
assets/js/: index.js  instance.js  run.js  runs.js
docker/webserver/: Dockerfile  entrypoint.sh
migrations/: 20241102153428_init.down.sql  20241102153428_init.up.sql  20241116214022_metadata.down.sql  20241116214022_metadata.up.sql  20241118095126_rename_treewidth.down.sql  20241118095126_rename_treewidth.up.sql  20241118153323_score_into_instance.down.sql  20241118153323_score_into_instance.up.sql  20241118164919_solver_run_names.down.sql  20241118164919_solver_run_names.up.sql  20241122095647_hide_runs.down.sql  20241122095647_hide_runs.up.sql  20241205180516_compute_time_is_nullable.down.sql  20241205180516_compute_time_is_nullable.up.sql  20241213173407_instance_fulltext_index.down.sql  20241213173407_instance_fulltext_index.up.sql
src/: lib.rs
src/pace/: graph.rs  instance_reader.rs  instance_writer.rs  mod.rs  solution.rs
src/server/: app_state.rs  mod.rs  router.rs
src/server/handlers/: common.rs  debug_restart.rs  instance_delete.rs  instance_download.rs  instance_fetch_unsolved.rs  instance_list.rs  instance_solutions.rs  instance_update_meta.rs  instance_upload.rs  mod.rs  solution_download.rs  solution_hash_list.rs  solution_upload.rs  solver_run_annotate.rs  solver_run_list.rs  solver_run_performance.rs  status.rs  tag_create.rs  tag_list.rs
src/server/handlers/fixtures/: instances.sql  solutions.sql  tags.sql
tools/: add_instances.ipynb  backup_db.sh  db_cli.sh  dump_db_to_sqlite.sh  letencrypt.sh  load_db_backup.sh  precompress_static_assets.sh
