[package]
name = "pace_server"
version = "0.1.0"
edition = "2021"

[features]
admin-api = []

[dependencies]
axum = { version = "0.7.7", features = ["multipart"] }
dotenv = "0.15.0"
http-body-util = "0.1.2"
itertools = "0.13.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sha1 = "0.10.6"
sqlx = { version = "0.8.2", features = ["runtime-async-std-native-tls", "mysql", "chrono", "uuid"] }
tokio = { version = "1.41.0", features = ["full"] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["cors", "fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-test = "0.2.5"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
